--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,12 +1,7 @@
 *, ::after, ::before {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    margin: 0;
-}
-
-p {
-    margin: 0;
-}
 
