After much consternation might have a way of making the two panes talk to one another, still WIP

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -2,16 +2,12 @@
 
 .main-container {
     display: flex;
+    /*height: 100vh;*/
 }
 
 .main-left-pane {
     background-color: blue;
-    height: 100vh;
+    /*height: 100vh;*/
     width: var(--left-pane-sizing);
 }
 
-.main-right-pane {
-    background-color: red;
-    height: 100vh;
-    width: calc(100vw - var(--left-pane-sizing));
-}
