--- a/src/stylesheets/MainMenu.css
+++ b/src/stylesheets/MainMenu.css
@@ -4,26 +4,23 @@
     --color-theme-tertiary: #1d75fd;
     --default-font-color: #686d73;
     --active-font-color: white;
+
+    --menu-item-width: 90%;
 }
 
 .main-menu-container {
     background-color: var(--color-theme-main);
     color: var(--default-font-color);
     text-align: center;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-flow: column;
-
-}
-
-.main-menu-subcontainer {
-    /*background-color: green;*/
-    color: var(--default-font-color);
-
+    align-items: center;
 }
 
 .primary-button {
-    width: 80%;
+    width: var(--menu-item-width);
     background-color: var(--color-theme-main);
     height: 2rem;
     border-radius: 10px;
@@ -38,7 +35,7 @@
 }
 
 .secondary-button{
-    width: 80%;
+    width: var(--menu-item-width);
     height: 2rem;
     border-radius: 10px;
     border: none;
@@ -49,20 +46,6 @@
     color: var(--active-font-color);
     background-color: var(--color-theme-tertiary);
 }
-
-/*button interiors*/
-.button-interior-container {
-    display: flex;
-}
-
-.button-label {
-    width: 80%;
-}
-.button-arrow {
-    width: 20%
-}
-
-
 
 /*latitude and longitude info*/
 .latlon {
@@ -82,11 +65,12 @@
     align-items: center;
     background-color: var(--color-theme-main);
     height: 0.5rem;
+    width: var(--menu-item-width);
 }
 
 .inner-spacer {
     background-color: var(--default-font-color);
     height: 0.1rem;
-    width: 80%;
+    width: 100%;
 }
 
