--- a/src/stylesheets/MainMenu.css
+++ b/src/stylesheets/MainMenu.css
@@ -112,6 +112,16 @@
     margin-bottom: 5px;
 }
 
+.vertical-margin-10px {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.menu-text-sizing-1 {
+    font-size: 1rem;
+    font-weight: 300;
+}
+
 .slider {
     -webkit-appearance: none;
     width: var(--menu-item-width);
